@@ -78,6 +78,23 @@ public class LearningMgrController {
 		
 		
 		try {
+			
+			if("학습".equals(params.getSearchval())){
+				params.setSearchval("l");
+			}
+			
+			if("평가".equals(params.getSearchval())){
+				params.setSearchval("e");
+			}
+			
+			if("Slide".equals(params.getSearchval())){
+				params.setSearchval("s");
+			}
+			
+			if("Cut".equals(params.getSearchval())){
+				params.setSearchval("c");
+			}
+			
 			List<EduModule> resultList = learningMgrService.selectModuleList(params);
 	        return new BaseResponse<List<EduModule>>(resultList);
         } catch (Exception e) {
@@ -286,7 +303,8 @@ public class LearningMgrController {
 			int result = 0;
 			
 			for(Long id : params.getModuleIdList()) {
-				params.setModuleId(new Long(id));				
+				//params.setModuleId(new Long());
+				params.setModuleId(Long.valueOf(id));			
 				result = learningMgrService.deleteModule(params);
 			}
 					
